@@ -33,10 +33,6 @@
 
 #include "paths.h"
 
-#if !defined(BSD) || defined(sparc)
-#define	vfork	fork
-#endif
-
 #ifdef __cplusplus
 extern "C" {
 #endif
