@@ -1216,3 +1216,5 @@ Fixed problem with rpict where it was drawing illum sources badly
 even when they weren't all that small in the view.
 
 Added in(i) function to rcalc for more flexible channel evaluation.
+
+Replaced all calls to vfork() with regular fork() calls.
